--- a/.github/workflows/lab-api-test.yml
+++ b/.github/workflows/lab-api-test.yml
@@ -8,7 +8,7 @@ on:
         required: false
         default: ""
 jobs:
-  Explore-GitHub-Actions:
+  Test-API:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -18,24 +18,9 @@ jobs:
       - name: 任意のコミットハッシュを指定。refが空ならHEADを取得。
         run: git checkout ${{ github.event.inputs.ref }}
         if: ${{ github.event.inputs.ref != '' }}
-      - name: setup newman
+      - name: install newman
         run: sudo npm install -g newman
-      - name: test install status
-        run: newman -v
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
       - name: run newman
-        run: newman run -e tmp_env.json tmp_collection.json
+        # disable SSL certificate verification PRDではちゃんと対処すること
+        run: newman run -k -e tmp_env.json tmp_collection.json
         working-directory: ./newman/api_lab
-      
-
-#  TestAPI:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      - name: Setup newman
-#        run: sudo npm install -g newman
-#      - name: 
-  
