--- a/.github/workflows/lab-api-test.yml
+++ b/.github/workflows/lab-api-test.yml
@@ -24,3 +24,17 @@ jobs:
         # disable SSL certificate verification PRDではちゃんと対処すること
         run: newman run -k -e tmp_env.json tmp_collection.json
         working-directory: ./newman/api_lab
+  Test-another-image:
+    runs-on: postman/newman
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: 任意のコミットハッシュを指定。refが空ならHEADを取得。
+        run: git checkout ${{ github.event.inputs.ref }}
+        if: ${{ github.event.inputs.ref != '' }}
+      - name: run newman
+        # disable SSL certificate verification PRDではちゃんと対処すること
+        run: newman run -k -e tmp_env.json tmp_collection.json
+        working-directory: ./newman/api_lab
