add verbose options

--- a/.github/workflows/lab-api-test.yml
+++ b/.github/workflows/lab-api-test.yml
@@ -23,5 +23,5 @@ jobs:
      - name: run newman
        # disable SSL certificate verification PRDではちゃんと対処すること
        #run: newman run -k -e tmp_env.json tmp_collection.json
-       run: newman run -k -e tmp_env.json tmp_logon_collection.json
+       run: newman run -k --verbose -e tmp_env.json tmp_logon_collection.json
        working-directory: ./newman/api_lab
